# ohm_mirror_detector_3D

./: CMakeLists.txt  package.xml
launch/: ohm_mirror_detector3D.launch
ohm_filter_3D/src/ohm_loopclosure/: CMakeLists.txt  README.txt  package.xml
ohm_filter_3D/src/ohm_loopclosure/launch/: loopclosure.launch
ohm_filter_3D/src/ohm_loopclosure/src/: ohm_loopclosure.cpp  ohm_loopclosure.h
ohm_filter_3D/src/ohm_mirror_detector_3d/: CMakeLists.txt  package.xml
ohm_filter_3D/src/ohm_mirror_detector_3d/launch/: ohm_2D_extractor.launch  ohm_mirror_detector3D.launch
ohm_filter_3D/src/ohm_mirror_detector_3d/src/: Object3D.cpp  Object3D.h  Scan3D.cpp  Scan3D.h  ohm_2d_extractor.cpp  ohm_2d_extractor.h  ohm_mirror_postfilter3D.cpp  ohm_mirror_postfilter3D.h  ohm_mirror_prefilter3D.cpp  ohm_mirror_prefilter3D.h  planeFunctions.cpp  planeFunctions.h  reflectionIdentification.cpp  reflectionIdentification.h  rosfunctions3D.cpp  rosfunctions3D.h  testFunctions.cpp  testFunctions.h
ohm_filter_3D/src/ohm_replay/: CMakeLists.txt  package.xml
ohm_filter_3D/src/ohm_replay/src/: replay.cpp  replay.h
ohm_filter_3D/src/simple_joy/: CMakeLists.txt  package.xml
ohm_filter_3D/src/simple_joy/launch/: simple_joy.launch
ohm_filter_3D/src/simple_joy/src/: simple_joy.cpp
src/: Object3D.cpp  Object3D.h  Scan3D.cpp  Scan3D.h  ohm_mirror_prefilter3D.cpp  ohm_mirror_prefilter3D.h  planeFunctions.cpp  planeFunctions.h  rosfunctions3D.cpp  rosfunctions3D.h
